--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="right-side">
 			<div class="rightside-content">
 				<h1>CRIZALDO <br/><strong>AJ CARL N. </strong></h1>
-				<p class="para">Curriculum Virtae</p>
+				<p class="para">Curriculum Vitae</p>
 				<br/><br/>
 				<h2>ABOUT ME</h2>
 				<p class="para1">Hi, I am Aj Carl N. Crizaldo. and I would like you to present my webpage. I am a student at North Eastern Mindanao State University. This is my first year, and I hope I will learn something in my college life. and my course is a Bachelor of Science in Information Technology. </p>
